Fix gap in ul

--- a/style.css
+++ b/style.css
@@ -22,48 +22,40 @@ body{
     
 }
 
-    .header-logo img{
-        width: 200px;
-        transform: scaleX(-1);
-    }
-
-
-    a{
-        color: #E5E7EB;
-        text-decoration: none;
-        font-size: 40px;
-        gap: 100px;
-            
-            
-    }
-
-
-
     .header{
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 1000px;
         margin-bottom: 100px;
-        border: dotted red;
+        
     }
 
-        .header-logo{
-            border: dotted red; 
+        .header-logo img{
+            width: 200px;
+            transform: scaleX(-1);
         }
-        
+
+
 
         ul{
             display: flex;
             list-style-type: none; 
             margin: 0;
             padding: 0;
-            gap: 70px;
-                color: #E5E7EB;
-                border: dotted red;
+            gap: 50px;
+            color: #E5E7EB;
             
             }
 
+            
+        .right-links a{
+            color: #E5E7EB;
+            text-decoration: none;
+            font-size: 20px;
+
+                
+        }
 
 /* Utah Section in First Section*/
 
